Actualizacion: Nuevos lanzamientos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,40 @@
                 <a href="#"><img src="Imagenes/K O.webp" alt="K.O" width="250px" height="250"></a>
                 <a href="#"><img src="Imagenes/mision imposible 6.webp" alt="mision imposible" width="250px" height="250"></a>
                 <a href="#"><img src="Imagenes/no way home.webp" alt="spiderman" width="250px" height="250"></a>
-                <a href="#"><img src="Imagenes/spiderman un nuevo universo.webp" alt="Un nuevo universo" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/spiderman un nuevo universo.webp" alt="Un nuevo universo" width="250px" height="250" ></a>
+            </div>
+            <div class="Nuevos-lanzamientos">
+            <div class="titulo">
+                <h2>Nuevos lanzamientos</h2>
+                <div class="indicadores">
+                    <button class="activo"></button>
+                    <button></button>
+                </div>
+            </div>
+            <div class="carrusel">
+                <a href="#"><img src="Imagenes/El juego del calamar Chimenea.webp" alt="Juago del calamar" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Extraterritorial.webp" alt="Extraterritorial" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Karol G.webp" alt="Karol G" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/La viuda negra.webp" alt="La viuda negra" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Vini Jr..webp" alt="Vini Jr" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Los niños perdidos.webp" alt="Los niños perdidos" width="250px" height="250"></a>
+            </div>
+            </div>
+            <div class="Thrillers">
+            <div class="titulo">
+                <h2>Thrillers</h2>
+                <div class="indicadores">
+                    <button class="activo"></button>
+                    <button></button>
+                </div>
+            </div>
+            <div class="carrusel">
+                <a href="#"><img src="" alt="" width="250px" height="250"></a>
+                <a href="#"><img src="" alt="" width="250px" height="250"></a>
+                <a href="#"><img src="" alt="" width="250px" height="250"></a>
+                <a href="#"><img src="" alt="" width="250px" height="250"></a>
+                <a href="#"><img src="" alt="" width="250px" height="250"></a>
+                <a href="#"><img src="" alt="" width="250px" height="250"></a>
             </div>
 
         </div>
