--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                 </div>
             </div>
             <div class="carrusel">
-                <a href="#"><img src="" alt="" width="250px" height="250"></a>
-                <a href="#"><img src="" alt="" width="250px" height="250"></a>
-                <a href="#"><img src="" alt="" width="250px" height="250"></a>
-                <a href="#"><img src="" alt="" width="250px" height="250"></a>
-                <a href="#"><img src="" alt="" width="250px" height="250"></a>
-                <a href="#"><img src="" alt="" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Saw.webp" alt="Saw" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/El circulo.webp" alt="el circulo" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Los crímenes de la academia.webp" alt="Los crimenes de la academia" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Nosotros.webp" alt="Nosotros" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Sleepy Hollow.webp" alt="Sleepy Hollow" width="250px" height="250"></a>
+                <a href="#"><img src="Imagenes/Slenderman.webp" alt="Slender Man" width="250px" height="250"></a>
             </div>
 
         </div>
